changes to games search path and new docker network
